--- a/app/src/main/res/layout/item_currency.xml
+++ b/app/src/main/res/layout/item_currency.xml
@@ -28,8 +28,7 @@
         android:id="@+id/favourite_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_vertical"
-        android:layout_weight="1"
+        android:layout_gravity="end|center_vertical"
         android:src="@drawable/baseline_star_24" />
 
 </androidx.appcompat.widget.LinearLayoutCompat>
