--- a/app/src/main/res/layout/fragment_popular.xml
+++ b/app/src/main/res/layout/fragment_popular.xml
@@ -5,7 +5,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/input_layout"
         android:layout_width="0dp"
@@ -13,7 +12,7 @@
         android:layout_marginHorizontal="8dp"
         android:layout_marginTop="16dp"
         android:hint="@string/hint"
-        app:layout_constraintEnd_toStartOf="@id/request_btn"
+        app:layout_constraintEnd_toStartOf="@id/sort_btn"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
@@ -26,40 +25,97 @@
             android:maxLength="3" />
     </com.google.android.material.textfield.TextInputLayout>
 
+    <ImageView
+        android:id="@+id/sort_btn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="16dp"
+        android:src="@drawable/baseline_sort_24"
+        app:layout_constraintBottom_toBottomOf="@id/input_layout"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@id/input_layout"
+        app:layout_constraintTop_toTopOf="@id/input_layout" />
+
     <Button
         android:id="@+id/request_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="8dp"
+        android:layout_marginTop="16dp"
         android:text="@string/request"
-        app:layout_constraintBottom_toBottomOf="@id/input_layout"
         app:layout_constraintEnd_toStartOf="@id/update_btn"
-        app:layout_constraintStart_toEndOf="@id/input_layout"
-        app:layout_constraintTop_toTopOf="@id/input_layout" />
+        app:layout_constraintHorizontal_chainStyle="packed"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/input_layout" />
 
     <Button
         android:id="@+id/update_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="8dp"
+        android:layout_marginTop="16dp"
         android:text="@string/update"
-        app:layout_constraintBottom_toBottomOf="@id/input_layout"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@id/request_btn"
-        app:layout_constraintTop_toTopOf="@id/input_layout" />
+        app:layout_constraintTop_toBottomOf="@id/input_layout" />
+
+    <TextView
+        android:id="@+id/title_currency"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="12dp"
+        android:layout_marginTop="16dp"
+        android:text="@string/currency"
+        android:textSize="16sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toStartOf="@id/title_count"
+        app:layout_constraintHorizontal_chainStyle="spread_inside"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/request_btn" />
+
+    <TextView
+        android:id="@+id/title_count"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:text="@string/value"
+        android:textSize="16sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toStartOf="@id/title_favourite"
+        app:layout_constraintStart_toEndOf="@id/title_currency"
+        app:layout_constraintTop_toBottomOf="@id/request_btn" />
+
+    <TextView
+        android:id="@+id/title_favourite"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="12dp"
+        android:text="@string/favourite"
+        android:textSize="16sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@id/title_count"
+        app:layout_constraintTop_toBottomOf="@id/request_btn" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycler_view"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_margin="16dp"
-        android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/input_layout"
+        app:layout_constraintTop_toBottomOf="@id/title_count"
         tools:itemCount="60"
         tools:listitem="@layout/item_currency" />
+
+    <androidx.constraintlayout.widget.Group
+        android:id="@+id/group_recycler_view"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:visibility="gone"
+        app:constraint_referenced_ids="recycler_view,title_count,title_currency,title_favourite" />
 
     <ProgressBar
         android:id="@+id/loading"
